# orchestr8

./: .gitignore  .gitleaks.toml  .markdownlint.json  ANALYSIS_FILES_EXAMINED.txt  ARCHITECTURE.md  ASYNC_ANALYSIS_INDEX.md  ASYNC_EXECUTION_ANALYSIS.md  ASYNC_IMPLEMENTATION_ROADMAP.md  CHANGELOG.md  CLAUDE.md  MCP_PROMPTS_IMPLEMENTATION.md  MCP_RESOURCES_IMPLEMENTATION.md  MIGRATION_COMPLETION_SUMMARY.md  MIGRATION_PLAN.md  ORCHESTR8_FINAL_VERIFICATION_REPORT.md  ORCHESTR8_MIGRATION_VERIFICATION_REPORT.md  ORCHESTR8_RESEARCH_ANALYSIS_README.md  PERFORMANCE-ANALYSIS-SUMMARY.txt  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PROMPT_ANALYSIS_SIMON_COMPARISON.md  PROMPT_ANALYSIS_SUMMARY.md  QA_VERIFICATION_COMPLETE.txt  README.md  README_PROMPT_ANALYSIS.md  REARCHITECTURE_FINAL.md  REARCHITECTURE_PLAN.md  RESEARCH_AGENT_ANALYSIS.md  RESEARCH_AGENT_SUMMARY.md  RESEARCH_ANALYSIS_INDEX.md  RESEARCH_ENVIRONMENTS_ANALYSIS.md  RESEARCH_ENVIRONMENTS_SUMMARY.md  RESEARCH_IMPLEMENTATION_GUIDE.md  RESEARCH_PATTERN_VISUAL_GUIDE.md  REVIEW-COMPLETION.txt  SECURITY.md  SECURITY_IMPLEMENTATION_CHECKLIST.md  SHA_VERIFICATION_REPORT.md  VERIFICATION_INDEX.md  architecture-analysis.md
.claude-plugin/: marketplace.json
plugins/orchestr8/mcp-server/orchestr8-async/: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  INTEGRATION.md  Makefile  README.md  SUMMARY.md
plugins/orchestr8/mcp-server/orchestr8-async/examples/: simple_task.sh  workflow_example.sh
plugins/orchestr8/mcp-server/orchestr8-async/src/: api.rs  db.rs  lib.rs  main.rs  mcp.rs  queue.rs  webhook.rs
(+628 files in other folders)
