[package]
name = "orchestr8-async"
version = "1.0.0"
edition = "2021"
authors = ["Seth Schultz <orchestr8@sethschultz.com>"]
description = "Async execution architecture for orchestr8 with DuckDB persistence and MCP integration"
license = "MIT"
repository = "https://github.com/seth-schultz/orchestr8"

[dependencies]
# MCP Server
mcp-server = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
duckdb = { version = "1.0", features = ["bundled", "r2d2"] }
r2d2 = "0.8"

# Async & Concurrency
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP & Webhooks
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Queue Management
crossbeam = "0.8"

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"

[[bin]]
name = "orchestr8-async-server"
path = "src/main.rs"

[lib]
name = "orchestr8_async"
path = "src/lib.rs"
